bump lys version